# yololab

./: .gitignore  .gitmodules  FPDToCoco.py  LayingPeopleFilter.py  README.md  RecogniseFallenPeople.py  Taskfile.yml  coco8.py  conv.py  dataset.json  datasetCleaner.py  datasetControl.py  docker-compose.yml  fuoribox  prova.txt  settings.yaml  txtExtractor.py
DatasetConverter/: Main.py  readme.md
DatasetConverter_with_coco/: Main.py  requirements.txt
datasets/: caucafall.yaml  fpds-mini.yaml  fpds.yaml
docker-sg/: Dockerfile  docker-compose.yml  requirements.txt
docker-ultralytics/: Dockerfile  docker-compose.yml  requirements.txt
documentation/: PoseDetection.ipynb  openimagesv7.py
formatted_output/: split7_001.txt  split7_002.txt  split7_003.txt  split7_004.txt  split7_005.txt  split7_006.txt  split7_007.txt  split7_008.txt  split7_009.txt  split7_010.txt  split7_011.txt  split7_012.txt  split7_013.txt  split7_014.txt  split7_015.txt  split7_016.txt  split7_017.txt  split7_018.txt  split7_019.txt  split7_020.txt  split7_021.txt  split7_022.txt  split7_023.txt  split7_024.txt  split7_025.txt  split7_026.txt  split7_027.txt  (+24 more)
yololab/: Dockerfile  README.md  pyproject.toml
yololab/yololab/: LayingPeopleFilter.py  config.py  databaseFormatter.py  datasetFormatter.py  dnn.py  grabber.py  main.py  txtExtractor.py  utils.py
yololab/yololab/dataset_utils/: DatasetCleaner.py  datasetGenerator.py  labelsToImages.py  moveall_img_label.py  txtCopier.py
yololab/yololab/dataset_utils/DatasetDynamicCropper/: BoundingBoxes.py  DynamicCropper.py  README.md  YoloDatasetGrabber.py  main.py
yololab/yololab/dataset_utils/dsconvert/api/: DatasetConverterAPI.py
yololab/yololab/dataset_utils/dsconvert/data/: BoundingBox.py  LabelData.py
yololab/yololab/dataset_utils/dsconvert/wrapper/: FPDSWrapper.py  VOCWrapper.py  YOLOWrapper.py
yololab/yololab/dataset_utils/old/: to_fallen_dataset.py
yololab/yololab/dataset_utils/openimages_yololizer/: OpenImageJoiner.py  main.py  openimages_normalizer.py
yololab/yololab/dataset_utils/reduceDataset/: README.md  main.py
yololab/yololab/dsconvert/: README.md  requirements.txt
yololab/yololab/dsconvert/api/: DatasetConverterAPI.py
yololab/yololab/dsconvert/config/: Config.py
yololab/yololab/dsconvert/data/: LabelData.py
yololab/yololab/dsconvert/wrapper/: CocoWrapper.py  LabelMeWrapper.py
yololab/yololab/experiments/: datasetGenerator.py  deepsort.py  export-onxx.py  onnx.py  onnx2.py  onnx3.py  onxx.py  predict.py  reduce_dataset.py  save.py  sg.py  train.py
yololab/yololab/experiments/ultralytics/: train.py
yololab/yololab/reduceDataset/: config.py  dataset_reducer.py  main.py
yololab/yololab/utils/: DatasetCleaner.py  body.py  datasetControl.py  datasetDynamicCropper.py  dnn.py  fpds.py  openimages_download.py  openimages_filter.py
yololab/yololab/utils/DatasetDynamicCropper/: BoundingBoxes.py  DynamicCropper.py  YoloDatasetGrabber.py  datasetDynamicCropperOLD.py  main.py
yololab/yololab/utils/dsconvert/: README.md  main.py
yololab/yololab/utils/dsconvert/api/: DatasetConverterAPI.py
yololab/yololab/utils/dsconvert/config/: Config.py
yololab/yololab/utils/dsconvert/wrapper/: CocoWrapper.py  LabelMeWrapper.py  Wrapper.py
yolorun/: README.md  pyproject.toml
yolorun/yolorun/: config.py  grabber.py  main.py  timing.py
yolorun/yolorun/dataset-convert/: labelconverter.py  main.py
yolorun/yolorun/models/: __init__.py  ultralytics.py
yolorun/yolorun/yolov8/: README.md  engine.py  torch_utils.py
(+23 files in other folders)
