
[project]
name = "yolorun"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Scipioni", email = "stefano.scipioni@csgalileo.net"},
]
dependencies = [
    "tensorrt>=8.6.1",
    "nvidia-tensorrt>=99.0.0",
    "configargparse>=1.5.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
yolorun = "yolorun.main:main"
